syntax = "proto3";

package health;
option go_package = "github.com/studyguides-com/study-guides-api/api/study/health;health";

enum HealthStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
  }

message HealthCheckRequest {}

message HealthCheckResponse {
  HealthStatus status = 1;
}
