syntax = "proto3";

package study;
option go_package = "github.com/studyguides-com/study-guides-api/api/study;study";

import "search/search.proto";
import "health/health.proto";

service StudyService {
  rpc Search(search.SearchRequest) returns (search.SearchResponse);
  rpc HealthCheck(health.HealthCheckRequest) returns (health.HealthCheckResponse);
}

